# kao

./: .env.example  .gitignore  .lintstagedrc  .prettierignore  .prettierrc  AGENTS.md  CLAUDE.md  COMPLETION_REPORT_03-04.md  COMPLETION_SUMMARY.md  DEPLOYMENT.md  FINAL_SUMMARY.md  Makefile  PLAN_03-04-EXECUTION-SUMMARY.md  QUICKSTART.md  README.md  README_EXECUTION.md  TEST_REPORT.md  docker-compose-simple.yml  docker-compose.yml  eslintrc.js  package-lock.json  package.json  playwright.config.ts  require.md
backend/: .dockerignore  .env.example  CLAUDE.md  Cargo.toml  Dockerfile  README.md  entrypoint.sh  migrate.sh
backend/.cargo/: config.toml
backend/.sqlx/: query-01b8b4c11c1af09a8c0d3de380f12ece69acba8af20c1ba2021e65829d1cf471.json  query-08e6ffd7e5b50763d2a21aaeab24ae53af586309ddb81a21d9bab506e44fb9bb.json  query-0dc187b7e6ee94dcbc1193f5b7a8b96fb9eb010d9ca81aaf9a9c3da9d98b0ecd.json  query-0eaa304077ebdb0139360eee4c90dff1f2f9053daa15f4458f94ab3e9743ea93.json  query-1e87ef64b2c94d6aef2109598628865cad88443ed81d7f785e174e59502ae66a.json  query-1f70806d8c48081e384b5c597b07cab133882170bd7c87207700e8d6910c3219.json  query-25bf8e3c6e860e0e3a91359ca8de1700332baae4d215452c9632a9f9e81f330d.json  query-2675698ad1891d1c4efd175392b2084a9402ced8394ad00d53836eb720ebde1b.json  query-2e9737eed177fdf143547c60639e1b72881548f4add69e8a9d44773df70b38d6.json  query-33c2944b92c316241021bbce6f0a5f397958950b0d1dd4f5cb753fff94694ce3.json  query-3cfcedd639760e6dfaa83baa4b912c970d82ac151bdb455aef4ea3f8b0cde490.json  query-4401eba999d629d276dbad3d9fcdf91e71be621d71bf14954f4c47146e899907.json  query-474c2a06ad17d70bae4515caeffc31c5ce10e1bce4047d3df1a1ff5b349adb01.json  query-5180a9a04869bc2af0037496fbdcc5f76234a740eff4c83fd92002da3ea74478.json  query-59038f6762cc8b2d48e373287e3464fe1b0878bf7c67fd1fb693e5972455798c.json  query-6854b4a7e2bb2674d70fea5c88269034d988b01149fd4d31a3e6c9d1c1e8f51b.json  query-6952142e2c863568a77aa5e402c440d1ac4dac050725ff77d59604bc41884741.json  query-73020c580a8d4594e2c71d56e84522bdcb5f1c9486179ddd6c8accc6f55733dc.json  query-7ea08c0a6337ab521c7978c510d0936ad5f76ffa4178c952ebd2fcdf65f5a007.json  query-837b28527d1b3295853b28b019c2c40fb907471641e24f49d7ca472c147f80d8.json  query-8b9bde7ede4b726cb70089478f4acd0e1f7cca3d6f5d5aaca1650ef6e5feeb53.json  query-8ec1fb271426b2b18603e1241be891383de845b1674a6587162347bdcbe123d0.json  query-9099d91fc2e8bb823fa705e1b8c68d6703068a4d1c0bc253e02b7b432240a8f2.json  query-920b447e82b6db486460ccdd0fe4b7654819b2d64e6911f8c2ae9735db8009b9.json  query-9e8c8bbe94216ee24fc8c4d4883ac9e4b9b64e74c3a1d1a88faf7b84e97bd008.json  query-a0d1bb4059b890e58a6731c8605926c5a70de34745ae00097315d14a26e06ed5.json  query-a558ac222058d958dac26e34b5b2fbd93085a8c68380938ee256d1a0914e69a5.json  query-a56c3e3f52715f55585b705e346f4b93451c1bcf9e5db6e7fdf5506a9de93942.json  query-a7bc82763f220b205c38f858657a30fb79a490ee2d5f7be2c59bcf0b91c97710.json  query-a8100f82bcff8ce303a783c9348ecf85fcd1bd905e3b90d233b723492ae37a97.json  query-b026b8d3c74f96744cbb3d0feae1a6ff946e5fd36a1c7c0a8c3207f50388e2d6.json  query-bd515dc15ada74528fe64023075fddf71fea95e69028f174eb27931f907ab9b2.json  query-bf51aacb69c33ee671eaca043f22762d5f69091ccb5ac880ef066b4edc39bb1e.json  query-cb3b343a8eb93af85a116cee28552a96d0ca7cf9cd400034a39447c424dca356.json  query-ccb508982e11a064e22a20befc60a64f55264f78bbfae8071b04e40fcbdd3f66.json  query-cee8f3eb6df9970ce62183aa3778ae67dfaa6d4f7202d661d8c6f4d30c382b8d.json  query-d5d4c3f45463b3ee0a22f1ccec4198fa1e0beec05074f34e552b015b36948adf.json  query-d6fddcaa4ae5270461920467226cb27df9a094e17a4bc3b211a0d83f11660784.json  (+9 more)
backend/src/: app.rs  (+4 more)
(+530 files in other folders)
