[package]
name = "kao-backend"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Kao backend API server"

[dependencies]
axum = { version = "0.7", features = ["macros", "tokio"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
jsonwebtoken = "9"
dotenv = "0.15"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
thiserror = "1"
anyhow = "1"
log = "0.4"
heck = "0.5"
utoipa = { version = "4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }
redis = { version = "0.25", features = ["aio", "tokio-comp"] }
prometheus = "0.13"
hex = "0.4"
once_cell = "1.19"
md5 = "0.7"
sha2 = "0.10"
futures = "0.3"
async-trait = "0.1"
validator = { version = "0.18", features = ["derive"] }
lazy_static = "1.4"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"
rand = "0.8"
async-std = { version = "1.12", features = ["attributes"] }
mockall = { version = "0.12", default-features = false }

[[test]]
name = "unit"
path = "tests/unit/mod.rs"

[[test]]
name = "integration"
path = "tests/integration/mod.rs"

[profile.test]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false
strip = true

# Production build profile with optimizations
[profile.production]
inherits = "release"
debug = false
strip = "symbols"
